# llmvit

./: .gitignore  LICENSE  README.md  pyproject.toml
llmvit/: __init__.py  demo.py  llm_vit.py  new_tokenizer.py
llmvit/models/: llm_vit.py  llm_vit_deprecated.py
llmvit/processor/: img_encoder.py  img_processor.py
llmvit/processor/embedders/: __init__.py  _base_embedder.py  direct_embedder.py  knn_embedder.py  max_embedder.py
llmvit/processor/encoders/: __init__.py  patch_embed.py  vit_encoder.py
llmvit/processor/img_encoders/: __init__.py  _base_encoder.py  patch_embed.py  vit_encoder.py
llmvit/utils/: datasets.py  metrics.py  train_utils.py
src/: demo.py  main.py
src/models/: llm_vit.py
src/utils/: datasets.py  metrics.py  train_utils.py
tests/: test_embedders.py  test_encoders.py  test_llm_vit.py  test_metrics.py
