[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "llmvit"
version = "0.1.1"
description = "A package for leveraging pretrained LLMs as vision transformer backbones."
license = "MIT"
authors = ["Benjamin Bodner <benjybo7@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/BjBodner/llmvit"
documentation = "https://github.com/BjBodner/llmvit"
packages = [
    { include = "llmvit" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


[tool.poetry.dependencies]
python = "^3.9"
# Optional dependencies
torch = { version = "^2.1.1", optional = true }
torchvision = { version = "^0.16.1", optional = true }
torchaudio = { version = "^2.1.1", optional = true }
python-dotenv = { version = "^1.0.1", optional = true }
wandb = { version = "^0.18.5", optional = true }
huggingface-hub = { version = "^0.27.0", optional = true }
pytest = { version = "^7.0.0", optional = true }
black = { version = "^24.0.0", optional = true }
bitsandbytes = { version = "^0.42.1", optional = true }
torch-cluster = { version = "^1.6.3", optional = true }
scipy = { version = "^1.9.1", optional = true }

[tool.poetry.extras]
default = ["torch", "torchvision", "torchaudio"]
dev = ["pytest", "black", "python-dotenv", "huggingface-hub", "wandb", "python-dotenv", "torch-cluster", "scipy"]
test = ["pytest"]

[tool.black]
force-exclude = '''
/(
  | /*venv*
  | /.git
  | /dist
  | /htmlcov
  | /docs
  | /site
)/
'''

[tool.poetry.urls]
"Homepage" = "https://github.com/BjBodner/llmvit"
"Bug Tracker" = "https://github.com/BjBodner/llmvit/issues" 

